--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link href="assets/css/page.min.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
    
  <body>
