--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <!-- Styles -->
 <link rel="stylesheet" href="css/style.css">
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link href="assets/css/page.min.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
