--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <link href="assets/css/page.min.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="node_modules/react-table/react-table.css">
 
    
  <body>
